--- a/styles/tundra.css
+++ b/styles/tundra.css
@@ -9,6 +9,8 @@
 }
 
 :root {
+    --clip: circle(0% at 100% 0);
+    --show: circle(141.2% at 100% 0);
     --text-color-primary: #f1faee;
     --red--palette: #e63946;
     --light--blue: #a8dadc;
@@ -21,47 +23,6 @@ body {
     overflow-x: hidden;
     background: linear-gradient(0deg, #1d3557 0%, #7fa2d3 100%);
 }
-/* 
-.header__nav {
-    border-radius: 10px;
-    top: 0;
-    margin: 1% 5%;
-    position: fixed;
-    z-index: 999;
-    width: 90vw;
-    padding: 10px 20px;
-    background-color: #f1faeec0;
-}
-header {
-    position: relative;
-    height: 100vh;
-    width: 100%;
-}
-
-.nav__links {
-    font-family: var(--font-primary);
-    font-weight: 600;
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-}
-
-.side__links {
-    color: black;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-}
-
-.side__links span {
-    font-weight: 800;
-    color: var(--red--palette);
-}
-
-.links__biomontrails {
-    display: flex;
-    align-items: center;
-} */
 
 .parallax_wrapper {
     background-size: cover;
@@ -172,7 +133,7 @@ header {
     top: 60%;
     left: 50%;
     transform: translate(-50%, 50%);
-    z-index: 999;
+    z-index: 20;
     font-family: var(--font-titles);
     font-weight: 600;
     font-size: 28px;
@@ -195,4 +156,40 @@ header {
 
 .sites__buttons a:hover {
     background-color: var(--medium--blue);
+}
+
+.modal_content .modal__img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    gap: 20px;
+    width: 50%;
+}
+
+.modal_content .modal__img p {
+    width: 80%;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.modal__button {
+    background-color: var(--red--palette);
+}
+
+.modal__checkbox:checked + .sumapaz {
+    clip-path: var(--show);
+    opacity: 1;
+}
+
+.modal__checkbox_sumapaz {
+    display: none;
+}
+
+.modal__checkbox_sumapaz:checked + .modal {
+    clip-path: var(--show);
+    opacity: 1;
 }
