--- a/styles/main.css
+++ b/styles/main.css
@@ -481,6 +481,7 @@ footer {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     position: relative;
     align-items: center;
     justify-content: center;
