add change search form

--- a/styles/components/navbar.css
+++ b/styles/components/navbar.css
@@ -209,7 +209,9 @@ header {
                 height: 42px;
                 align-items: center;
 
-                & a {
+                & button {
+                    background-color: transparent;
+                    border: none;
                     cursor: pointer;
                 }
                 & input {
