--- a/styles/components/modal.css
+++ b/styles/components/modal.css
@@ -7,6 +7,7 @@
 }
 
 .modal {
+    overflow: auto;
     z-index: 100;
     position: fixed;
     background: rgba(0, 0, 0, 0.4);
@@ -21,13 +22,28 @@
     clip-path: var(--clip);
     transition: all 1s ease;
 
-    @media screen and (width <= 600px) {
+    @media screen and (width <= 768px) {
         & .modal_content {
+            gap: 20px;
+            display: flex;
+            overflow-y: scroll;
+            flex-direction: column;
             width: 90%;
-            outline: 1px saddlebrown solid;
 
-            & img {
-                height: 100px;
+            & iframe {
+                width: 100%;
+                height: 100%;
+            }
+            & .modal__img {
+                width: 100%;
+
+                & img {
+                    height: 80%;
+                    width: 80%;
+                }
+                & p {
+                    width: 100%;
+                }
             }
         }
     }
@@ -43,6 +59,10 @@
     display: flex;
     height: 80%;
     width: 80%;
+
+    & p {
+        font-size: clamp(1rem, -1.5rem + 8vw, 3rem);
+    }
 }
 
 .modal_content img {
