--- a/styles/seccions/tundra.css
+++ b/styles/seccions/tundra.css
@@ -54,6 +54,13 @@ body {
     width: 100vw;
     padding: 40px 0;
 
+    & p {
+        width: 100%;
+        @media screen and (width <= 768px) {
+            width: 80%;
+        }
+    }
+
     @media screen and (width <= 600px) {
         flex-direction: column;
 
@@ -66,9 +73,6 @@ body {
 
                 width: 150px;
             }
-            & .card_text {
-                top: 72%;
-            }
 
             & .card_sumapaz {
                 top: 60%;
@@ -77,7 +81,8 @@ body {
                 width: 150px;
             }
             & .card_text {
-                top: 72%;
+                top: 69%;
+                font-size: 20px;
             }
         }
     }
@@ -165,7 +170,7 @@ section.sites:nth-of-type(2) {
 
 .card_text {
     position: absolute;
-    top: 60%;
+    top: 56%;
     left: 50%;
     transform: translate(-50%, 50%);
     z-index: 20;
