--- a/styles/components/modal.css
+++ b/styles/components/modal.css
@@ -30,6 +30,8 @@
             flex-direction: column;
             width: 90%;
 
+            height: 95%;
+
             & iframe {
                 width: 100%;
                 height: 100%;
