--- a/styles/seccions/desierto.css
+++ b/styles/seccions/desierto.css
@@ -40,11 +40,60 @@ body {
 .parallax__text {
     z-index: 10;
     color: white;
-    font-size: 220px;
+    font-size: clamp(5rem, -2.8125rem + 25vw, 11.25rem);
     padding: 10px;
     border-radius: 30px;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.sites {
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    padding: 40px 0;
+
+    & p {
+        width: 100%;
+        @media screen and (width <= 768px) {
+            width: 80%;
+        }
+    }
+
+    @media screen and (width <= 600px) {
+        flex-direction: column;
+
+        & .sites_img_container {
+            width: 80%;
+
+            & .card_culata {
+                top: 60%;
+                height: 180px;
+
+                width: 150px;
+            }
+
+            & .card_sumapaz {
+                top: 60%;
+                height: 180px;
+
+                width: 150px;
+            }
+            & .card_text {
+                top: 69%;
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+section.sites:nth-of-type(2) {
+    @media screen and (width <= 600px) {
+        flex-direction: column-reverse;
+    }
+}
+
 .sites_img_container {
     display: flex;
     gap: 30px;
@@ -102,15 +151,6 @@ body {
     color: var(--text-color-primary);
 }
 
-.sites {
-    justify-content: space-evenly;
-    align-items: center;
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    padding: 40px 0;
-}
-
 .card_sumapaz {
     top: 50%;
     left: 50%;
@@ -130,7 +170,7 @@ body {
 
 .card_text {
     position: absolute;
-    top: 60%;
+    top: 56%;
     left: 50%;
     transform: translate(-50%, 50%);
     z-index: 20;
