--- a/styles/seccions/bosque.css
+++ b/styles/seccions/bosque.css
@@ -1,322 +1,240 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Poppins:wght@200;300;400;600;800&display=swap");
+
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
 :root {
-  --clip: circle(0% at 100% 0);
-  --show: circle(141.2% at 100% 0);
-  --text-color-primary: #c1ffa4;
-  --font-primary: "Poppins", sans-serif;
-  --font-titles: "Merriweather", serif;
+    --clip: circle(0% at 100% 0);
+    --show: circle(141.2% at 100% 0);
+    --text-color-primary: #f1faee;
+    --boton-modal: #dad7cd;
+    --light--blue: #a8dadc;
+    --hover-buton-modal: #588157;
+    --card-text-color: #344e41;
+    --font-primary: "Poppins", sans-serif;
+    --font-titles: "Merriweather", serif;
 }
 body {
-  background: linear-gradient(0deg, #a3b18a 0%, #588157 100%);
-  color: #222;
-  font-family: var(--font-primary);
+    font-family: var(--font-primary);
+    overflow-x: hidden;
+    background: linear-gradient(0deg, #a3b18a 0%, #588157 100%);
+}
+
+.hero {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-image: url("../../assets/img/bosque/bosque_palma_cera.jpg");
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.parallax__text {
+    z-index: 10;
+    color: white;
+    font-size: clamp(5rem, -2.8125rem + 25vw, 11.25rem);
+    padding: 10px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.sites {
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    padding: 40px 0;
+
+    & p {
+        width: 100%;
+        @media screen and (width <= 768px) {
+            width: 80%;
+        }
+    }
+
+    @media screen and (width <= 600px) {
+        flex-direction: column;
+
+        & .sites_img_container {
+            width: 80%;
+
+            & .site_img_1 {
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+
+            & .card__1 {
+                top: 60%;
+                height: 180px;
+
+                width: 150px;
+            }
+
+            & .card__2 {
+                top: 60%;
+                height: 180px;
+
+                width: 150px;
+            }
+            & .card_text {
+                top: 75%;
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+section.sites:nth-of-type(2) {
+    @media screen and (width <= 600px) {
+        flex-direction: column-reverse;
+    }
+}
+
+.sites_img_container {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    position: relative;
+}
+
+.sites_img_container h2 {
+    position: relative;
+    font-size: 30px;
+    color: white;
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.site_img_1 {
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: url("../../assets/img/bosque/avila.jpg");
+    width: 100%;
+    height: 90%;
+    @media screen and (width <= 500px) {
+        margin-top: 20px;
+    }
+}
+.site_img_2 {
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: url("../../assets/img/bosque/bosque_palma_cera_loro.jpg");
+    width: 100%;
+    height: 90%;
+    @media screen and (width <= 500px) {
+        margin-top: 20px;
+    }
+}
+
+.sites_text {
+    align-items: center;
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    width: 400px;
+    height: 60%;
+}
+
+.sites_text h2 {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    text-shadow: 5px 5px 2px rgba(0, 0, 0, 0.4);
+    @media screen and (width <= 500px) {
+        width: 80%;
+    }
+}
+.sites_text p {
+    border-radius: 10px;
+    background-color: var(--card-text-color);
+    font-size: 20px;
+    padding: 15px;
+    box-shadow: 2px 1px 10px rgba(255, 0, 200, 0.329);
+    color: var(--text-color-primary);
+}
+
+.card__1 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    height: 240px;
+    box-shadow: 1px 1px 5px rgba(159, 196, 226, 0.466);
+}
+.card__2 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    height: 240px;
+    box-shadow: 1px 1px 5px rgba(159, 196, 226, 0.466);
+}
+
+.card_text {
+    position: absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    z-index: 20;
+    font-family: var(--font-titles);
+    font-weight: 600;
+    font-size: 28px;
+}
+
+.modal_content .modal__img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    gap: 20px;
+    width: 50%;
+}
+
+.modal_content .modal__img p {
+    width: 80%;
 }
 a {
-  text-decoration: none;
-}
-.nav {
-  z-index: 11;
-  width: 100%;
-  position: fixed;
-  background: whitesmoke;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 20px;
-  align-items: center;
+    text-decoration: none;
+    color: black;
 }
 
-.nav a {
-  font-size: 20px;
-  color: #000;
-  font-weight: 800;
-  transition: 0.3s;
+.modal__button {
+    background-color: var(--boton-modal);
 }
 
-.nav-logo {
-  display: flex;
-  align-items: center;
-  width: 100px;
+.modal__checkbox:checked + .sumapaz {
+    clip-path: var(--show);
+    opacity: 1;
 }
 
-ul {
-  display: none;
-  position: absolute;
-  top: 40px;
-  background: whitesmoke;
-  padding: 5px;
-  width: 100px;
-  border-radius: 10px;
-  list-style: none;
-}
-ul li {
-  font-family: var(--font-primary);
-}
-.nav-logo:hover + ul {
-  display: block;
-}
-ul:hover {
-  display: block;
+.modal__checkbox_sumapaz {
+    display: none;
 }
 
-.buscar {
-  position: relative;
-  padding: 9px;
-}
-.buscar input {
-  width: 0px;
-  height: 30px;
-  padding: 0 20px;
-  font-size: 18px;
-  color: black;
-  /* para que no se muestre el borde al dar click */
-  outline: none;
-  border: 1px solid silver;
-  border-radius: 30px;
-  transition: 0.6s;
-}
-.btn {
-  width: 55px;
-  height: 55px;
-  position: absolute;
-  top: 0;
-  right: 0px;
-  line-height: 55px;
-  text-align: center;
-  color: black;
-  font-size: 20px;
-  cursor: pointer;
-}
-.buscar:hover input {
-  width: 240px;
-}
-.buscar input:focus {
-  width: 240px;
+.modal__checkbox_sumapaz:checked + .modal {
+    clip-path: var(--show);
+    opacity: 1;
 }
 
-.parallax_wrapper {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-image: url(../assets/img/bosque/bosque_palma_cera.jpg);
-  background-size: cover;
-  background-position: center;
-  color: whitesmoke;
-  background-attachment: fixed;
+.modal__button {
+    color: black;
 }
 
-.bosquew-text {
-  z-index: 10;
-  color: white;
-  font-size: 100px;
-  padding: 10px;
-  border-radius: 30px;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.bosque-c {
-  height: 100vh;
-  width: 70vw;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  background-size: cover;
-  background-position: center;
-  color: whitesmoke;
-  background-attachment: fixed;
-}
-
-.bosque-c .bosque-text {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.bosque-c .bosque-text h2 {
-  font-family: var(--font-titles);
-  font-size: 40px;
-  font-weight: 800;
-  color: whitesmoke;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-}
-.bosque-c .bosque-text .bosque-content {
-  background: rgba(0, 0, 0, 0.5);
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.Bosque-img-container {
-  display: flex;
-  gap: 30px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100%;
-  position: relative;
-}
-.bosque-img {
-  background-image: url(../assets/img/bosque/bosque_palma_cera_loro.jpg);
-  background-size: contain;
-  width: 100%;
-  height: 70%;
-  background-attachment: fixed;
-  background-position: left;
-}
-.card-pict {
-  position: absolute;
-}
-
-.card-text {
-  position: absolute;
-  color: black;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  z-index: 20;
-  font-family: var(--font-titles);
-  font-weight: 600;
-  font-size: 28px;
-}
-.bosque-v {
-  height: 100vh;
-  width: 70vw;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  background-size: cover;
-  background-position: center;
-  color: whitesmoke;
-  background-attachment: fixed;
-}
-
-.bosque-v .bosque-text {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.bosque-v .bosque-text h2 {
-  font-family: var(--font-titles);
-  font-size: 40px;
-  font-weight: 800;
-  color: whitesmoke;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-}
-.bosque-v .bosque-text .bosque-content {
-  background: rgba(0, 0, 0, 0.5);
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.bosquev-img {
-  background-image: url(../assets/img/bosque/avila.jpg);
-  background-size: contain;
-  width: 100%;
-  height: 70%;
-  background-attachment: fixed;
-  background-position: left;
-}
-.card-pict {
-  position: absolute;
-}
-
-.card-text {
-  position: absolute;
-  color: black;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  z-index: 20;
-  font-family: var(--font-titles);
-  font-weight: 600;
-  font-size: 28px;
-}
-
-.bosque-c2 {
-  height: 100vh;
-  width: 70vw;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  background-size: cover;
-  background-position: center;
-  color: whitesmoke;
-  background-attachment: fixed;
-}
-
-.bosque-c2 .bosque-text {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.bosque-c2 .bosque-text h2 {
-  font-family: var(--font-titles);
-  font-size: 40px;
-  font-weight: 800;
-  color: whitesmoke;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-}
-.bosque-c2 .bosque-text .bosque-content {
-  background: rgba(0, 0, 0, 0.5);
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.Bosque-img-container {
-  display: flex;
-  gap: 30px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  height: 100%;
-  position: relative;
-}
-.bosquec2-img {
-  background-image: url(../assets/img/bosque/selvaamazonica.jpg);
-  background-size: contain;
-  width: 100%;
-  height: 70%;
-  background-attachment: fixed;
-  background-position: left;
-}
-.card-pict {
-  position: absolute;
-}
-
-.card-text {
-  position: absolute;
-  color: black;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  z-index: 20;
-  font-family: var(--font-titles);
-  font-weight: 600;
-  font-size: 28px;
+.modal__button:hover {
+    color: white;
+    background-color: var(--hover-buton-modal);
 }
