add city styles

--- a/styles/seccions/ciudad.css
+++ b/styles/seccions/ciudad.css
@@ -9,51 +9,105 @@
 }
 
 :root {
-    --text-color-primary: #c1ffa4;
+    --clip: circle(0% at 100% 0);
+    --show: circle(141.2% at 100% 0);
+    --text-color-primary: #f1faee;
+    --boton-modal: #002b6b;
+    --light--blue: #a8dadc;
+    --hover-buton-modal: rgb(255, 217, 0);
+    --card-text-color: #003f88;
     --font-primary: "Poppins", sans-serif;
     --font-titles: "Merriweather", serif;
-    --color-fondo: linear-gradient(0deg, rgba(72,172,252,1) 0%, rgba(255,213,0,1) 100%);
+}
+body {
+    font-family: var(--font-primary);
+    overflow-x: hidden;
 }
 
-body{
-    background: rgb(72,172,252);
-    background: linear-gradient(0deg, rgba(72,172,252,1) 0%, rgba(255,213,0,1) 100%);
-    background-repeat: no-repeat;
-
+main {
+    background: linear-gradient(
+        0deg,
+        rgba(72, 172, 252, 1) 0%,
+        rgba(255, 213, 0, 1) 50%
+    );
 }
 
-.wallaper-name{
+.hero {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: url("/assets/img/ciudad/medellin.jpg");
+    background-image: url("../../assets/img/ciudad/medellin.jpg");
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    object-fit: cover;
 }
-
-.ciudad{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: space-around;
-}
-
-.ciudad-text{
+.parallax__text {
     z-index: 10;
     color: white;
-    font-size: 220px;
+    font-size: clamp(5rem, -2.8125rem + 25vw, 11.25rem);
     padding: 10px;
     border-radius: 30px;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.img-container{
+.sites {
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    padding: 40px 0;
+
+    & p {
+        width: 100%;
+        @media screen and (width <= 768px) {
+            width: 80%;
+        }
+    }
+
+    @media screen and (width <= 600px) {
+        flex-direction: column;
+
+        & .sites_img_container {
+            width: 80%;
+
+            & .site_img_1 {
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+
+            & .card__1 {
+                top: 60%;
+                height: 180px;
+
+                width: 150px;
+            }
+
+            & .card__2 {
+                top: 60%;
+                height: 180px;
+
+                width: 150px;
+            }
+            & .card_text {
+                top: 75%;
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+section.sites:nth-of-type(2) {
+    @media screen and (width <= 600px) {
+        flex-direction: column-reverse;
+    }
+}
+
+.sites_img_container {
     display: flex;
     gap: 30px;
     flex-direction: column;
@@ -64,83 +118,118 @@ body{
     position: relative;
 }
 
-.img-container h2 {
+.sites_img_container h2 {
+    position: relative;
     font-size: 30px;
     color: white;
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
-.ciudad-img {
+.site_img_1 {
     background-attachment: fixed;
     background-size: cover;
-    background-image: url("../assets/img/ciudad/M4ZAAD7JYNDCVE3AC4MR54G34U.avif");
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
+    background-image: url("../../assets/img/ciudad/M4ZAAD7JYNDCVE3AC4MR54G34U.avif");
+    width: 100%;
+    height: 90%;
+}
+.site_img_2 {
+    background-attachment: fixed;
+    background-size: cover;
+    background-image: url("../../assets/img/ciudad/puerto2.webp");
+    width: 100%;
+    height: 90%;
+}
+
+.sites_text {
+    align-items: center;
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    width: 400px;
+    height: 60%;
+}
+
+.sites_text h2 {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    text-shadow: 5px 5px 2px rgba(0, 0, 0, 0.4);
+}
+.sites_text p {
+    border-radius: 10px;
+    background-color: var(--card-text-color);
+    font-size: 20px;
+    padding: 15px;
+    box-shadow: 2px 1px 10px rgba(255, 0, 200, 0.329);
+    color: var(--text-color-primary);
+}
+
+.card__1 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    height: 240px;
+    box-shadow: 1px 1px 5px rgba(159, 196, 226, 0.466);
+}
+.card__2 {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    height: 240px;
+    box-shadow: 1px 1px 5px rgba(159, 196, 226, 0.466);
 }
 
 .card_text {
     position: absolute;
-    top: 65%;
-    color: white;
-    z-index: 999;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    z-index: 20;
     font-family: var(--font-titles);
+    font-weight: 600;
     font-size: 28px;
+    color: white;
 }
 
-.ciudad_text2 p{
-    background-color: rgba(0, 0, 0, 0.4);
-    font-size: 20px;
-    padding: 20px;
-}
-
-.ciudad_text2 .buttons a{
-   text-decoration: none;
-   padding: 10px;
-   color: white;
-   border-radius: 15px;
-   background-color: #00296b;
-}
-
-.ciudad_text2 .buttons{
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    margin-top: 20px;
-}
-
-.ciudad_text2 {
+.modal_content .modal__img {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    gap: 20px;
+    width: 50%;
 }
 
-.ciudad_text2{
-    color: white;
-    padding: 50px;
-    margin: auto;
-    width: 40%;
+.modal_content .modal__img p {
+    width: 80%;
+}
+a {
+    text-decoration: none;
+    color: black;
 }
 
-.card_pict {
-    top: 200px;
-    position: absolute;
-    background-attachment: fixed;
+.modal__button {
+    background-color: var(--boton-modal);
 }
 
-.vzla{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: end;
-    justify-content: space-around;
+.modal__checkbox:checked + .sumapaz {
+    clip-path: var(--show);
+    opacity: 1;
 }
 
-.puerto_img{
-    background-attachment: fixed;
-    background-size: cover;
-    background-image: url("../assets/img/ciudad/puerto2.webp");
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
+.modal__checkbox_sumapaz {
+    display: none;
+}
+
+.modal__checkbox_sumapaz:checked + .modal {
+    clip-path: var(--show);
+    opacity: 1;
+}
+
+.modal__button:hover {
+    color: black;
+    background-color: var(--hover-buton-modal);
 }
