--- a/styles/main.css
+++ b/styles/main.css
@@ -24,12 +24,14 @@ body {
 }
 
 .hero {
+    clip-path: circle(0% at 0 100%);
     position: relative;
     height: 90vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: show__hero 4s ease forwards;
 
     @media screen and (width <= 600px) {
         height: 120vh;
@@ -665,5 +667,11 @@ footer {
                 color: white;
             }
         }
+    }
+}
+
+@keyframes show__hero {
+    to {
+        clip-path: circle(141.2% at 0 100%);
     }
 }
